# CSC399-HW4

./: .gitignore
MyNotes/: ForkEx.c  SystemLibrary.md
MyNotes/10/CSystemLibraries/: .dupExample.c.swp  Makefile  dontInterruptMe.c  dupBiggerExample.c  dupExample.c  forkBomb.c  forkPipe.c  forkPipeTwo.c  forkSharing.c  forkTest.c  forkTest2.c  modDate.c  splitFork.c
MyNotes/10/CSystemLibraries/Complex/: Makefile  matrixMultInParallel.C  matrixMultInParallelImproved.C  matrixMultInParallelTwo.C
MyNotes/10/CSystemLibraries/DeadLock/: Makefile  diningPhilosophers.C
MyNotes/10/CSystemLibraries/Thread/: Makefile  threadingTheSum.c
Program4/: .quShell.c.swp  CMakeLists.txt  Makefile  README.TXT  README.md  builtins.c  command.c  command.h  global.h  quShell  quShell.c  quShell.d  tokenizer.c  tokenizer.d  tokenizer.h  typescript  varSet.h
Program4/Input/: shell.1  shell.2  shell.3  shell.4  shell.5  shell.6
Program4/Output/: shell.1.out  shell.4.out  shell.6.combined  shell.6.out
Testing/: forkex.c
